--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "php": "^8.2",
         "codeat3/blade-phosphor-icons": "^2.3",
         "laravel/framework": "^12.0",
+        "laravel/horizon": "^5.32",
         "laravel/tinker": "^2.10.1"
     },
     "require-dev": {
